package org.muni.pa165.data.enums;

public enum ComponentType {
    ENGINE,
    GEAR,
    SPOILER,
    SUSPENSION
}
