package org.muni.pa165.data.enums;

public enum DriverPerk {
    HAMMER_TIME,
    VERSTAPPEN,
    SMOOTH_OPERATOR,
    TYRE_WEAR,
    FUEL_SAVING,
    RAIN_MASTER,
    OVERTAKER,
    MAZESPIN,
    ROOKIE,
}
